
CREATE TABLE transaction_batches (
    id                      UUID            NOT NULL DEFAULT gen_random_uuid(),

    -- Human-readable reference: BATCH-YYYYMMDD-XXXX
    -- Generated by BatchUploadService before insert
    batch_reference         VARCHAR(30)     NOT NULL,

    -- Who uploaded this batch (Bank Admin)
    uploaded_by             UUID            NOT NULL,

    -- Original filename as uploaded by Bank Admin
    file_name               VARCHAR(255)    NOT NULL,

    -- SHA-256 hex string (64 chars) — deduplication guard
    -- Computed BEFORE Cloudinary upload.
    -- DuplicateBatchException thrown if this hash already exists.
    file_hash_sha256        CHAR(64)        NOT NULL,

    file_size_bytes         BIGINT          NOT NULL
                                CHECK (file_size_bytes > 0),

    -- Cloudinary references (CSV/Excel preview + storage)
    cloudinary_public_id    VARCHAR(255),
    cloudinary_secure_url   TEXT,

    -- Populated after ValidationStep completes
    total_records           INTEGER         NOT NULL DEFAULT 0
                                CHECK (total_records >= 0),

    -- Lifecycle state — driven by Spring Batch job transitions
    batch_status            VARCHAR(15)     NOT NULL DEFAULT 'PENDING',

    -- Row-level validation errors from ValidationStep
    -- Format: [{"row": 42, "field": "amount", "error": "non-numeric value"}]
    -- NULL until validation fails or completes
    failure_details         JSONB,

    -- Spring Batch JobExecution ID for log correlation
    spring_batch_job_id     VARCHAR(100),

    -- Populated when batch_status transitions to PROCESSED or FAILED
    processed_at            TIMESTAMPTZ,

    -- Soft delete (admin archival only)
    sys_is_deleted          BOOLEAN         NOT NULL DEFAULT FALSE,
    sys_deleted_at          TIMESTAMPTZ,

    -- Audit timestamps
    sys_created_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW(),
    sys_updated_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW(),

    -- ── Constraints ──────────────────────────────────────────
    CONSTRAINT pk_transaction_batches
        PRIMARY KEY (id),

    CONSTRAINT uq_transaction_batches_reference
        UNIQUE (batch_reference),

    -- Core deduplication guarantee — DB-level, not just app-level
    CONSTRAINT uq_transaction_batches_hash
        UNIQUE (file_hash_sha256),

    CONSTRAINT chk_tb_status
        CHECK (batch_status IN (
            'PENDING',      -- uploaded, awaiting Spring Batch pickup
            'VALIDATING',   -- ValidationStep running
            'PROCESSING',   -- TransactionPersistStep + RuleEngineStep running
            'PROCESSED',    -- all steps completed successfully
            'FAILED'        -- any step failed — see failure_details
        )),

    -- processed_at must be set when terminal status reached
    CONSTRAINT chk_tb_processed_at
        CHECK (
            batch_status NOT IN ('PROCESSED', 'FAILED') OR
            processed_at IS NOT NULL
        ),

    CONSTRAINT fk_tb_uploaded_by
        FOREIGN KEY (uploaded_by)
        REFERENCES tenant_users (id)
);

-- ── Indexes ───────────────────────────────────────────────────
-- Bank Admin upload history list — ordered by most recent
CREATE INDEX idx_tb_uploaded_by_time
    ON transaction_batches (uploaded_by, sys_created_at DESC)
    WHERE sys_is_deleted = FALSE;

-- Status-based queries (dashboard pending/processing counts)
CREATE INDEX idx_tb_status
    ON transaction_batches (batch_status, sys_created_at DESC)
    WHERE sys_is_deleted = FALSE;

-- Spring Batch job correlation (log debugging)
CREATE INDEX idx_tb_job_id
    ON transaction_batches (spring_batch_job_id)
    WHERE spring_batch_job_id IS NOT NULL;
