
-- ── 1. ALERTS ─────────────────────────────────────────────────
CREATE TABLE alerts (
    id                      UUID            NOT NULL DEFAULT gen_random_uuid(),

    -- Transaction that triggered this alert
    transaction_id          UUID            NOT NULL,

    -- Cross-schema refs (common_schema — no FK constraints)
    global_scenario_id      UUID            NOT NULL,
    global_rule_id          UUID            NOT NULL,

    -- Nullable: set only when a tenant threshold override was
    -- active at the moment this alert was generated.
    -- Frozen snapshot — never changes after insert.
    tenant_rule_version_id  UUID,

    -- Human-readable reference: ALT-YYYYMMDD-XXXXX
    alert_reference         VARCHAR(25)     NOT NULL,

    severity                VARCHAR(10)     NOT NULL,

    -- Lifecycle status — transitions drive the investigation workflow
    status                  VARCHAR(25)     NOT NULL DEFAULT 'NEW',

    -- Human-readable label of the typology that fired
    -- e.g. "Structuring", "PEP Transaction", "High-Risk Geography"
    typology_triggered      VARCHAR(100),

    -- Computed risk score from rule base_risk_score + modifiers
    risk_score              NUMERIC(5, 2)   NOT NULL DEFAULT 0.00
                                CHECK (risk_score BETWEEN 0 AND 100),

    -- No soft-delete columns — alerts are NEVER physically removed.
    -- Status transitions close them. PostgreSQL RULE enforces this.
    sys_created_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW(),
    sys_updated_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW(),

    -- ── Constraints ──────────────────────────────────────────
    CONSTRAINT pk_alerts
        PRIMARY KEY (id),

    CONSTRAINT uq_alerts_reference
        UNIQUE (alert_reference),

    CONSTRAINT chk_alert_severity
        CHECK (severity IN ('HIGH', 'MEDIUM', 'LOW')),

    CONSTRAINT chk_alert_status
        CHECK (status IN (
            'NEW',                      -- generated by rule engine, awaiting review
            'DISMISSED',                -- Bank Admin dismissed without case creation
            'BUNDLED_TO_CASE',          -- linked to an active case via CASE_ALERT_LINKS
            'CLOSED_CONFIRMED',         -- case closed as STR_FILED — confirmed suspicious
            'CLOSED_FALSE_POSITIVE'     -- case closed as FALSE_POSITIVE
            --                          -- CLOSED_* enables Rule Effectiveness Report:
            --                          -- confirmed / total = true positive rate per rule
        )),

    CONSTRAINT fk_alert_transaction
        FOREIGN KEY (transaction_id)
        REFERENCES transactions (id),

    CONSTRAINT fk_alert_tenant_version
        FOREIGN KEY (tenant_rule_version_id)
        REFERENCES tenant_rule_versions (id)
);

-- ── Indexes ───────────────────────────────────────────────────
-- Bank Admin alert dashboard — primary filter surface
-- HIGH severity alerts sorted first, then by created time
CREATE INDEX idx_alerts_severity_status_time
    ON alerts (severity, status, sys_created_at DESC);

-- CO's assigned alert queue within a case
CREATE INDEX idx_alerts_transaction
    ON alerts (transaction_id);

-- Rule Effectiveness Report: per-rule confirmed vs total alert count
-- Drives the false-positive rate calculation in PlatformReportService
CREATE INDEX idx_alerts_rule_status
    ON alerts (global_rule_id, status);

-- Scenario-level grouping for dashboard summary panels
CREATE INDEX idx_alerts_scenario_severity
    ON alerts (global_scenario_id, severity, status);

-- Tenant version lookup — "all alerts generated under this rule version"
CREATE INDEX idx_alerts_version
    ON alerts (tenant_rule_version_id)
    WHERE tenant_rule_version_id IS NOT NULL;

-- ── IMMUTABILITY ENFORCEMENT FOR ALERTS ──────────────────────
-- Alerts are system-generated only.
-- DELETE is blocked at DB layer — alerts must be closed via status,
-- never physically removed. Immutability of the audit chain requires
-- that every generated alert is permanently traceable.
CREATE OR REPLACE RULE no_delete_alerts AS
    ON DELETE TO alerts
    DO INSTEAD NOTHING;


-- ── 2. ALERT_EVIDENCE ──────────────────────────────────────────
CREATE TABLE alert_evidence (
    id                      UUID            NOT NULL DEFAULT gen_random_uuid(),

    -- Parent alert
    alert_id                UUID            NOT NULL,

    -- Cross-schema ref: common_schema.global_rule_conditions.id
    -- The specific condition that was breached
    -- No FK constraint (cross-schema) — enforced at service layer
    global_condition_id     UUID            NOT NULL,

    -- Nullable: set when a tenant threshold override was the
    -- breached value (not the global default)
    tenant_threshold_id     UUID,

    -- Cross-schema ref: common_schema.data_dictionary.id
    -- Used by StrDocumentGenerator to build human-readable narratives:
    -- "Transaction amount [15000] exceeded threshold [10000]"
    -- No FK constraint (cross-schema) — enforced at service layer
    data_dictionary_id      UUID            NOT NULL,

    -- The raw runtime value that broke the threshold.
    -- Stored as string to support all data types:
    --   NUMERIC: "15000"
    --   STRING : "KP" (country code)
    --   COUNT  : "5" (velocity count)
    --   BOOLEAN: "true"
    actual_evaluated_value  VARCHAR(500)    NOT NULL,

    -- Immutable snapshot — no updates ever
    sys_created_at          TIMESTAMPTZ     NOT NULL DEFAULT NOW(),

    -- ── Constraints ──────────────────────────────────────────
    CONSTRAINT pk_alert_evidence
        PRIMARY KEY (id),

    CONSTRAINT chk_ae_value_not_empty
        CHECK (length(actual_evaluated_value) > 0),

    CONSTRAINT fk_ae_alert
        FOREIGN KEY (alert_id)
        REFERENCES alerts (id),

    CONSTRAINT fk_ae_tenant_threshold
        FOREIGN KEY (tenant_threshold_id)
        REFERENCES tenant_rule_thresholds (id)
);

-- ── Indexes ───────────────────────────────────────────────────
-- Alert detail view — loads all evidence rows for one alert
CREATE INDEX idx_ae_alert
    ON alert_evidence (alert_id);

-- STR document generation — loads evidence for all alerts in a case
CREATE INDEX idx_ae_alert_condition
    ON alert_evidence (alert_id, global_condition_id);

-- ── IMMUTABILITY ENFORCEMENT FOR ALERT_EVIDENCE ──────────────
CREATE OR REPLACE RULE no_delete_alert_evidence AS
    ON DELETE TO alert_evidence
    DO INSTEAD NOTHING;
